--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,8 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/db_springboot?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: user_springboot
+    url: jdbc:mysql://localhost:3306/db_github?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: user_github
     password: 1234
 
   # thymeleaf ?? ??
